# C-primer_Solution

./: .gitignore  readme.md
Cha1/: 1_10.cpp  1_11.cpp  1_16.cpp  1_19.cpp  1_20.cpp  1_21.cpp  1_22.cpp  1_3.cpp  1_4.cpp  1_6.cpp  1_9.cpp  CMakeLists.txt  Sales_item.h
Cha10/: 10_1.cpp  10_11.cpp  10_13.cpp  10_14.cpp  10_15.cpp  10_16.cpp  10_2.cpp  10_20.cpp  10_21.cpp  10_24.cpp  10_27.cpp  10_29.cpp  10_3.cpp  10_30.cpp  10_31.cpp  10_33.cpp  10_34.cpp  10_36.cpp  10_37.cpp  10_4.cpp  10_5.cpp  10_6.cpp  10_7.cpp  10_8.cpp  even.txt  number.txt  odd.txt  test.cpp  text.txt
Cha11/: 11_10.cpp  11_11.cpp  11_12.cpp  11_13.cpp  11_15.cpp  11_16.cpp  11_18.cpp  11_20.cpp  11_21.cpp  11_22.cpp  11_26.cpp  11_28.cpp  11_3.cpp  11_31.cpp  11_32.cpp  11_33.cpp  11_7.cpp  11_8.cpp  11_9.cpp  CMakeLists.txt
Cha12/: 12_1.cpp  12_14.cpp  12_16.cpp  12_18.cpp  12_27.cpp  12_6.cpp  12_7.cpp  12_9.cpp  CMakeLists.txt  test.cpp
Cha13/: 13_13.cpp  13_14.cpp  13_18.cpp  13_22.cpp  13_27.cpp  13_28.cpp  13_29.cpp  13_33.cpp  13_46.cpp  13_5.cpp  13_58.cpp  test.cpp
Cha14/: 14_34.cpp  14_35.cpp  14_37.cpp  14_38.cpp  14_39.cpp  14_42.cpp  14_43.cpp  14_44.cpp  14_47.cpp  14_7.cpp  test.cpp
Cha15/: 15_1.cpp  15_13.cpp  15_15.cpp  15_28.cpp  CMakeLists.txt  test.cpp
Cha16/: 16_19.cpp  16_20.cpp  16_21.cpp  16_34.cpp  16_37.cpp  16_4.cpp  16_41.cpp  16_42.cpp  16_47.cpp  16_5.cpp  16_51.cpp  16_53.cpp  16_56.cpp  16_6.cpp  16_7.cpp  16_8.cpp  CMakeLists.txt  (+1 more)
Cha7/: 7_23.cpp  7_31.cpp  7_32.cpp  7_36.cpp  7_37.cpp  7_4.cpp  7_43.cpp  7_53.cpp  7_57.cpp  7_58.cpp  CMakeLists.txt
(+147 files in other folders)
